--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo-uno"]
 	path = themes/hugo-uno
 	url = https://github.com/callmeradical/hugo-uno.git
+[submodule "public"]
+	path = public
+	url = https://github.com/callmeradical/callmeradical.github.io.git
