--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://callmeradical.com/"
+baseurl = "http://callmeradical.github.io"
 languageCode = "en-us"
 contentdir = "content"
 publishdir = "public"
