--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/callmeradical/hugo-uno.git
 [submodule "public"]
 	path = public
-	url = git@github.com:callmeradical/callmeradical.github.io.git
+	url = https://github.com/callmeradical.github.io
