--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "themes/hemingway"]
 	path = themes/hemingway
 	url = https://github.com/callmeradical/hemingway.git
-[submodule "callmeradical.github.io"]
+[submodule "public"]
 	path = public
-  url = https://github.com/callmeradical/callmeradical.github.io.git
+	url = https://github.com/callmeradical/callmeradical.github.io.git
