--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://callmeradical.com"
+baseurl = "http://cromleylabs.com"
 languageCode = "en"
 title = "Lars Cromley"
 theme = "hemingway"
