--- a/config.toml
+++ b/config.toml
@@ -15,8 +15,12 @@ style = "github"
 languages = ["go", "dockerfile"]
 
 [[params.social]]
-url = "/page/about"
+url = "/about"
 fa_icon = "fa-id-badge"
+
+[[params.social]]
+url = "/disclaimer"
+fa_icon = "fa-exclamation-circle"
 
 [[params.social]]
 url = "https://github.com/callmeradical"
@@ -25,6 +29,10 @@ fa_icon = "fa-github"
 [[params.social]]
 url = "https://twitter.com/callmeradical"
 fa_icon = "fa-twitter"
+
+[[params.social]]
+url = "https://www.linkedin.com/in/callmeradical"
+fa_icon = "fa-linkedin"
 
 [[params.social]]
 url = "/index.xml"
