--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,19 +3,21 @@ name: CI
 on: [push]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-    
+  build-deploy:
+    runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
-    - name: Check current directory
-      run: |
-        pwd
-        ls -al
+    - uses: actions/checkout@master
+      with:
+        submodules: true
+
+    - name: Setup Hugo
+      uses: peaceiris/actions-hugo@v2.2.1
+      with:
+        hugo-version: '0.55.6'
+
+    - name: Build
+      run: hugo --gc --minify --cleanDestinationDir
+
+
+    - name: Deploy
+      run: ./deploy.sh
