--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,8 +7,6 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@master
-      with:
-        submodules: true
 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2.2.1
@@ -20,4 +18,8 @@ jobs:
 
 
     - name: Deploy
-      run: ./deploy.sh
+      uses: peaceiris/actions-gh-pages@v2.4.0
+      env:
+        ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+        PUBLISH_BRANCH: source
+        PUBLISH_DIR: ./docs
