--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,5 +21,5 @@ jobs:
       uses: peaceiris/actions-gh-pages@v2.4.0
       env:
         ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        PUBLISH_BRANCH: source
-        PUBLISH_DIR: ./docs
+        PUBLISH_BRANCH: gh-pages
+        PUBLISH_DIR: ./public
