--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,9 @@
-name: CI
+name: Source Branch
 
-on: [push]
+on:
+  push:
+    branches:
+      - source # default branch
 
 jobs:
   build-deploy:
@@ -23,3 +26,5 @@ jobs:
         ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         PUBLISH_BRANCH: master
         PUBLISH_DIR: ./public
+      with:
+        emptyCommits: false
