--- a/data/banner.yml
+++ b/data/banner.yml
@@ -4,7 +4,7 @@ title: "Lars Cromley"
 subtitle: |
   Building today’s platforms for tomorrow’s possibilities
 content: |
-  A game developer and semi-pro gamer turned Navy aviation ordnance man, Lars spent a decade launching startups and scaling infrastructure—before joining Deloitte as a Technology Fellow in the Office of the CTO and leader of its Space Practice.
+  A game developer and semi-pro gamer turned Navy aviation ordnance man, Lars spent a two decades launching startups and scaling infrastructure—before joining Deloitte as a Technology Fellow in the Office of the CTO and leader of its Space Practice.
 
   Today he engineers cloud-native, AI-powered platforms—from satellite constellations to supermarket supply chains—that endure, evolve, and scale. He gives talks and tells stories—infusing stoic philosophy, sci-fi narrative, and assorted esoteric passions into every blueprint.
 
